[package]
name = "happybomber-escrow"
version = "0.1.0"
description = "HAPPYBOMBER escrow program for staking and payouts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "happybomber_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
